Closed Bug 1007107 Opened 10 years ago Closed 10 years ago

Function branchTestMagicValue is wrong on X64, ARM and MIPS

Categories

(Core :: JavaScript Engine: JIT, defect)

x86_64
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: rankov, Assigned: rankov)

Details

Attachments

(2 files, 2 obsolete files)

Function branchTestMagicValue in MacroAssembler has a bug in the case when condition is NotEqual.
Attached patch test-magic-value.patch (obsolete) — Splinter Review
Carry review from previous patch.

This patch has been moved here from bug 994716 after review.
Attachment #8418720 - Flags: review+
Assignee: nobody → branislav.rankov
Comment on attachment 8425496 [details] [diff] [review]
test-magic-value-mips-arm-x64.patch

I changed this to be the same for ARM, X64 and MIPS. 

If you think that this is better than previous patch, I will make the previous patch obsolete.
Attachment #8425496 - Flags: review?(nicolas.b.pierron)
Comment on attachment 8425496 [details] [diff] [review]
test-magic-value-mips-arm-x64.patch

Review of attachment 8425496 [details] [diff] [review]:
-----------------------------------------------------------------

Nice! :)
Do the same thing for x86.

I have only one doubt on x64, where I guess we might store the Value as a relocatable value.  I guess it might not be that important, but it would be better to check about that on try.
Attachment #8425496 - Flags: review?(nicolas.b.pierron) → review+
Carry review from previous patch.
Updated r=nbp.
Attachment #8418720 - Attachment is obsolete: true
Attachment #8425496 - Attachment is obsolete: true
Attachment #8426935 - Flags: review+
Attachment #8426936 - Flags: review?(nicolas.b.pierron)
(In reply to Nicolas B. Pierron [:nbp] from comment #4)
> Nice! :)
> Do the same thing for x86.

Thanks. I just made a patch for this too.

> I have only one doubt on x64, where I guess we might store the Value as a
> relocatable value.  I guess it might not be that important, but it would be
> better to check about that on try.

I have put both patches to try:
https://tbpl.mozilla.org/?tree=Try&rev=5b3a33d3f9fe
Attachment #8426936 - Flags: review?(nicolas.b.pierron) → review+
Checkin is needed. Here is try link:
https://tbpl.mozilla.org/?tree=Try&rev=5b3a33d3f9fe
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: