Bug 1007107 - IonMonkey: Fix bug in branchTestMagicValue on X64, ARM and MIPS. r=nbp